# CephSight-Insight-into-Ceph-CI-Failures

./: .gitignore  AI_teutology_report.html  Dockerfile  Makefile  README.md  analyzer.py  cluster.py  fetcher.py  log_parser.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Modelfile  analyzer.py  app.py  log_parser.py  main.py  report_generator.py  requirements.txt
frontend/: index.html
tests/: test_analyzer.py  test_cluster.py  test_parser.py
